mdapioutput/objects/VisitDialog_Layout__mdt.object
<CustomObject>
    <description>Mobile Visit Pop-up Layout Settings</description>
    <fields>
        <fullName>DialogType__c</fullName>
        <label>Dialog Type (depreciated)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Preparation</fullName>
                    <default>true</default>
                    <label>Preparation</label>
                </value>
                <value>
                    <fullName>Execution</fullName>
                </value>
                <value>
                    <fullName>Finalization</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsSoundsEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Sounds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LayoutHeaderLabel__c</fullName>
        <label>Layout Header Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LayoutOrder__c</fullName>
        <label>Layout Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitObject__c</fullName>
        <description>Object to which the visit relates</description>
        <label>Visit Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitRecordTypeName__c</fullName>
        <label>Visit Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitStepField__c</fullName>
        <label>Visit Step Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitStepsPassedField__c</fullName>
        <label>Visit Steps Passed Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Visit Dialog Layout Settings</label>
    <pluralLabel>Visit Dialog Layout Settings</pluralLabel>
</CustomObject>